--- a/src/course_reg_sys/sample/views/sample.fxml
+++ b/src/course_reg_sys/sample/views/sample.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 
-<GridPane alignment="center" hgap="10" vgap="10" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
+<GridPane alignment="center" hgap="10" vgap="10" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="course_reg_sys.sample.controller.Controller">
    <columnConstraints>
       <ColumnConstraints />
       <ColumnConstraints />
