--- a/src/assignment/view/mainUi.fxml
+++ b/src/assignment/view/mainUi.fxml
@@ -8,13 +8,14 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="assignment.controller.RegistrationFxController">
    <children>
       <Button fx:id="addButton" layoutX="115.0" layoutY="14.0" mnemonicParsing="false" text="New Registration"/>
       <Label layoutX="14.0" layoutY="55.0" text="Course ID" />
       <TextField layoutX="115.0" layoutY="50.0" />
       <Button layoutX="115.0" layoutY="87.0" mnemonicParsing="false" text="Add Course" />
-      <TableView layoutX="14.0" layoutY="138.0" prefHeight="200.0" prefWidth="568.0">
+      <TableView fx:id="table" layoutX="14.0" layoutY="138.0" prefHeight="200.0" prefWidth="568.0">
         <columns>
           <!--<TableColumn editable="false" prefWidth="75.0" sortable="false" text="SL #" />-->
           <TableColumn fx:id="title" prefWidth="145.0" text="Course Title" />
