--- a/src/assignment/view/mainUi.fxml
+++ b/src/assignment/view/mainUi.fxml
@@ -8,19 +8,20 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="assignment.controller.RegistrationFxController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="assignment.controller.RegistrationFxController">
    <children>
-      <Button fx:id="addButton" layoutX="115.0" layoutY="14.0" mnemonicParsing="false" text="New Registration"/>
+      <Button fx:id="newReg" layoutX="115.0" layoutY="14.0" mnemonicParsing="false" onAction="#addReg" text="New Registration" />
       <Label layoutX="14.0" layoutY="55.0" text="Course ID" />
-      <TextField layoutX="115.0" layoutY="50.0" />
-      <Button layoutX="115.0" layoutY="87.0" mnemonicParsing="false" text="Add Course" />
+      <TextField fx:id="courseField" layoutX="115.0" layoutY="50.0" />
+      <Button fx:id="addButton" layoutX="115.0" layoutY="87.0" mnemonicParsing="false" onAction="#addCourse" text="Add Course" />
       <TableView fx:id="table" layoutX="14.0" layoutY="138.0" prefHeight="200.0" prefWidth="568.0">
         <columns>
           <!--<TableColumn editable="false" prefWidth="75.0" sortable="false" text="SL #" />-->
-          <TableColumn fx:id="title" prefWidth="145.0" text="Course Title" />
+            <TableColumn fx:id="slNo" prefWidth="50.0" text="SL #" />
+            <TableColumn fx:id="title" prefWidth="145.0" text="Course Title" />
             <TableColumn fx:id="credit" prefWidth="103.0" text="Credit" />
             <TableColumn fx:id="tuitionPerCredit" prefWidth="126.0" text="Tuition/Credit" />
+            <TableColumn fx:id="subTotal" prefWidth="126.0" text="Sub Total" />
             <!--<TableColumn prefWidth="117.0" text="Sub Total" />-->
         </columns>
       </TableView>
