--- a/src/assignment/view/mainUi.fxml
+++ b/src/assignment/view/mainUi.fxml
@@ -1,18 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.*?>
-<?import java.lang.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-
+<?import javafx.scene.layout.AnchorPane?>
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="assignment.controller.RegistrationFxController">
    <children>
       <Button fx:id="newReg" layoutX="115.0" layoutY="14.0" mnemonicParsing="false" onAction="#addReg" text="New Registration" />
       <Label layoutX="14.0" layoutY="55.0" text="Course ID" />
-      <TextField fx:id="courseField" layoutX="115.0" layoutY="50.0" />
+       <ComboBox fx:id="courseField" layoutX="115.0" layoutY="50.0" prefWidth="150.0" />
       <Button fx:id="addButton" layoutX="115.0" layoutY="87.0" mnemonicParsing="false" onAction="#addCourse" text="Add Course" />
       <TableView fx:id="table" layoutX="14.0" layoutY="138.0" prefHeight="200.0" prefWidth="568.0">
         <columns>
@@ -25,6 +19,6 @@
         </columns>
       </TableView>
       <Label layoutX="363.0" layoutY="338.0" text="Total" />
-      <Label fx:id="grandTotal" layoutX="489.0" layoutY="338.0" text="0"/>
+      <Label fx:id="grandTotal" layoutX="489.0" layoutY="338.0" text="0" />
    </children>
 </AnchorPane>
