--- a/src/assignment/view/mainUi.fxml
+++ b/src/assignment/view/mainUi.fxml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.scene.layout.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.AnchorPane?>
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="assignment.controller.RegistrationFxController">
+
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="425.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="assignment.controller.RegistrationFxController">
    <children>
       <Button fx:id="newReg" layoutX="115.0" layoutY="14.0" mnemonicParsing="false" onAction="#addReg" text="New Registration" />
       <Label layoutX="14.0" layoutY="55.0" text="Course ID" />
@@ -18,7 +21,11 @@
             <TableColumn fx:id="subTotal" prefWidth="126.0" text="Sub Total" />
         </columns>
       </TableView>
-      <Label layoutX="363.0" layoutY="338.0" text="Total" />
-      <Label fx:id="grandTotal" layoutX="489.0" layoutY="338.0" text="0" />
+      <Label layoutX="353.0" layoutY="338.0" text="Total" />
+      <Label fx:id="total" layoutX="449.0" layoutY="338.0" text="0" />
+      <Label layoutX="245.0" layoutY="367.0" text="Development Fee / BD Tax" />
+      <Label layoutX="331.0" layoutY="394.0" text="Grand Total" />
+      <Label fx:id="devFee_bdTax" layoutX="449.0" layoutY="367.0" text="0" />
+      <Label fx:id="grandTotal" layoutX="449.0" layoutY="394.0" text="0" />
    </children>
 </AnchorPane>
