--- a/src/assignment/view/mainUi.fxml
+++ b/src/assignment/view/mainUi.fxml
@@ -31,7 +31,7 @@
       <CheckBox fx:id="freedomBox" layoutX="14.0" layoutY="393.0" mnemonicParsing="false" text="Freedom Fighter" />
        <ComboBox fx:id="bestComboSelector" layoutX="14.0" layoutY="418.0" prefWidth="150.0" />
        <Button fx:id="discountButton" layoutX="14.0" layoutY="449.0" mnemonicParsing="false" onAction="#calculateDiscount" text="Calculate Discount" />
-      <Label layoutX="353.0" layoutY="393.0" text="Discount" />
-      <Label fx:id="discount" layoutX="449.0" layoutY="393.0" text="0" />
+      <!--<Label layoutX="353.0" layoutY="393.0" text="Discount" />-->
+      <!--<Label fx:id="discount" layoutX="449.0" layoutY="393.0" text="0" />-->
    </children>
 </AnchorPane>
